--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,55 @@ img {
   max-width: 100%;
 }
 
+/* Глобальні стилі кнопок */
+button {
+  /* Шрифти - за замовчуванням */
+	font-family: inherit;
+  /* Колір тексту - текущий колір батьківського елементу */
+	color: currentColor;
+
+  display: block;
+
+  /* Вирівнювання кнопки по центру  */
+  margin-left: auto ;
+  margin-right: auto;
+
+  /* Внутрішні відступи (вертикальні - горизонтальні) */
+  padding: 16px 32px;
+
+  border: none;
+
+  /* Радіус кнопки */
+  border-radius: 4px;
+
+  /* Тінь кнопки */
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15) ;
+
+  /* Шрифт тексту кнопки */
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5 ;
+  letter-spacing: 0.04em;
+
+  /* Колір тексту  - стиль  --white: #ffffff */
+  color: var(--white);
+  /* Колір - стиль  --iris: #4d5ae5  */
+  background-color: var(--iris);
+
+  /* Тип курсора */
+  cursor: pointer;
+
+    /* Параметри переходу */
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* Глобальні стилі для input */
+input {
+  /* Задання сімейства шрифтів */
+  /* inherit - наслідування від батьківського елементу */
+	font-family: inherit;
+}
+
 
 
 /* Стилі сторінки */
@@ -278,44 +327,8 @@ body {
 
 /* Кнопка */
 .hero-button {
-  display: block;
-
   /* Відcтуп від тексту */
   margin-top: 48px;
-
-  /* Вирівнювання кнопки по центру  */
-  margin-left: auto ;
-  margin-right: auto;
-
-  /* Внутрішні відступи (вертикальні - горизонтальні) */
-  padding: 16px 32px;
-
-  min-width: 169px;
-  height: 56px;
-  border: none;
-
-  /* Радіус кнопки */
-  border-radius: 4px;
-
-  /* Тінь кнопки */
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15) ;
-
-  /* Шрифт тексту кнопки */
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5 ;
-  letter-spacing: 0.04em;
-
-  /* Колір тексту  - стиль  --white: #ffffff */
-  color: var(--white);
-  /* Колір - стиль  --iris: #4d5ae5  */
-  background-color: var(--iris);
-
-  /* Тип курсора */
-  cursor: pointer;
-
-    /* Параметри переходу */
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -678,7 +691,7 @@ body {
   gap: 16px;
 }
 
-.page-footer .social .text {
+.page-footer .text {
   margin-bottom: 16px;
   font-size: 16px;
   font-weight: 500;
@@ -737,4 +750,166 @@ body {
   display: block;
   /*   Колір стиль --cloud: #f4f4fd; */ 
   fill: var(--cloud);
+}
+
+/* Форма для вводу електронної пошти та кнопки відправлення */
+.subscribe-form {
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
+  background-color: var(--navy-blue);
+}
+
+/* Поле input для вводу електронної пошти */
+.subscribe-input {
+  padding: 8px 16px;
+  color: var(--white);
+  background-color: var(--navy-blue);
+  border: 1px solid var(--white);
+  border-radius: 4px;
+  box-shadow: 0 4 4 0 rgba(0, 0, 0, 0.15);
+}
+
+/* Колір тексту підказки в input */
+.subscribe-input::placeholder{
+  color: var(--white);
+}
+
+
+.subscribe-btn {
+  padding: 8px 16px;
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  box-shadow: none;
+}
+
+/* .subscribe-btn .icon {
+  color: var(--white);
+} */
+
+.subscribe-btn:hover,
+.subscribe-btn:focus {
+  /* Колір - стиль  --ocean: #404bbf  */
+  background-color: var(--ocean);
+}
+
+
+/* Модальне вікно */
+
+/* Підложка модального вікна */
+.modal-overlay {
+  /* Фіксована позиція стосовно body вікна браузера - viewport */
+  position: fixed;
+  /* Позиціонування - верхній лівий вугол */
+  top:0;
+  left:0;
+  /* Займає всю площу вікна браузера */
+  width: 100%;
+  height: 100%;
+  /* Робимо flex для вирівнювання самого модального вікна */
+  display:flex;
+  /* Вирівнюємо модальне вікно по горизонталі та вертикалі */
+  justify-content: center;
+  align-items: center;
+  /* Робимо модальне вікно найвершим шаром (Наивысшим слоем) */
+  /* Найвищій позиціонований елемент на осі Z */
+  z-index: 999;
+
+  /* Фон підложки модального вікна */
+  /*   --navy-blue-modal: rgba(46, 47, 66, 0.4); */
+  background-color: var(--navy-blue-modal);
+
+  /* Робимо прозорими підложку та модальне вікно  */
+  opacity: 0;
+  /* Робимо, щоб события проходили сквозь это програчное окно */
+  /* На overlay ігноруються події миші */
+  pointer-events: none;
+    /* Параметри переходу - прозорість */
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.modal-overlay.is-open {
+    /* Робимо НЕпрозорими підложку та модальне вікно  */
+  opacity: 1;
+  /* Робимо, щоб события були можливі на модальному вікні */
+  pointer-events: auto;
+}
+
+/* Модальне вікно */
+.modal {
+  /* Для абсолютного позиционирования кнопки */
+  position: relative;
+  /* Ограничиваем ширину и высоту модального окна */
+  max-width: 408px;
+  max-height: 90%;
+  /* При переполнении - появляется скролл по оси Y */
+  overflow-y: auto;
+
+  /* Колір --dairy: #fcfcfc; */
+  background-color: var(--dairy);
+
+  padding: 72px 24px 24px 24px;
+  border-radius: 4px;
+
+    /* Тінь */
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 
+  0px 1px 3px 0px rgba(0, 0, 0, 0.12), 
+  0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+
+}
+
+/* Кнопка закрытия модального окна */
+.modal-close-btn {
+  /* Абсолютное позиционирование кнопки */
+  position: absolute;
+  top: 24px;
+  right: 24px;
+
+  /* Обнуляем дефолтные паддинги */
+  padding: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24px;
+  height: 24px;
+
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.10);
+
+  color: #000;
+  background-color: #fff;
+
+}
+
+/* Cтилі тексту для всіх label */
+label {
+  /* Small Text */
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  /* Колір --light-slate: #8e8f99; */
+  color: var(--light-slate)
+
+}
+/* Блок з усіма input в модальному вікні */
+.mod-inputs {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin: 16px auto;
+}
+
+/* Блок одного input в модальному вікні */
+.mod-input {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+/* Блок з checkbox акцептування */
+.mod-accept {
+  margin-bottom: 24px;
 }
