--- a/css/styles.css
+++ b/css/styles.css
@@ -774,7 +774,7 @@ body {
   background-color: transparent;
   border: 1px solid var(--white);
   border-radius: 4px;
-  box-shadow: 0 4 4 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); 
 }
 
 /* Колір тексту підказки в input */
@@ -856,8 +856,10 @@ body {
   position: absolute;
 
   /* Ограничиваем ширину и высоту модального окна */
-  max-width: 408px;
-  max-height: 584px; 
+  /* для визначення ширини елемента */
+  width: 408px;
+  /* для визначення мінімальної висоти елемента на веб-сторінці */
+  min-height: 584px;  
   
   /* Центрування модального вікна по горизонталі та вертикалі */
   top: 50%;
@@ -881,12 +883,11 @@ body {
   0px 1px 3px 0px rgba(0, 0, 0, 0.12), 
   0px 1px 1px 0px rgba(0, 0, 0, 0.14);
 
-
 }
 
 .modal-title {
   font-size: 16px;
-  font-weight: 500px;
+  font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
   /* Колір стиль --navy-blue: #2e2f42; */
@@ -935,12 +936,20 @@ body {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.close-btn .icon:hover {
+.close-btn:hover .icon,
+.close-btn:focus .icon {
   fill: #ffffff;
 }
 
+
+.modal-input {
+  margin-bottom: 8px;
+}
+
 /* Cтилі тексту для всіх label в модальному вікні */
-.modal-form label {
+.input-label {
+  /* Для подальшої реалізації відступів між елементами */
+  display: block;
   /* Small Text */
   font-size: 12px;
   line-height: 1.17;
@@ -951,58 +960,179 @@ body {
 }
 
 
+/* Контейнер для поля input (для вставки иконки) */
+.input-thumb {
+  /* Для встановлення позиціонування елемента  */
+  position: relative;
+}
+
 /* Поля ввода - input */
-.modal-form input {
+.input-thumb .input {
+  /* елемент займає повну ширину його батьківського елемента */
   width: 100%;
+  /* висота */
   height: 40px;
-
-  padding-left: 31px;
-
-  /* Шрифт  */
-  
+  /* стиль, ширина та колір межі навколо елемента */
   border: 1px solid var(--navy-blue-modal);
+  /* радіус закруглення кутів елемента */
   border-radius: 4px;
-
+  /* колір фону елемента */
+  background-color: transparent;
+  /* налаштування внутрішніх відступів для контенту */
+  padding-left: 38px;
+  /* встановлення стилю контуру для елемента */
+  outline: transparent; 
+  /* для плавної зміни кольору рамки */
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 /* Поля ввода - input - при  :focus*/
-.modal-form input:focus {
+.input-thumb .input:focus {
   /* Выключаем свойство outline:, которое автоматически при фокусе на элемент */
-  outline: none;
-  /* Меняем цвет рамки */
+  /* outline: none; */
+  /* для зміни кольору рамки при кліку */
   border-color: var(--iris);
-}
-
-/* Контейнер для поля input (для вставки иконки) */
-.thumb-input {
-  display: block;
-  position: relative;
 }
 
 /* Иконка в input  */
 .thumb-input .icon {
-  display: block;
-  margin: 0;
+  /* display: block;
+  margin: 0; */
   /* Даем абсолютное позиционирование */
   position: absolute;
-  /* Центрируем по оси Y */
+  /* Даємо відступ зліва по осі X */
+  left: 16px;
+  /* Центрируємо єлемент по осі Y */
   top: 50%;
   transform: translateY(-50%);
-  /* Даем отступ слева по оси X */
-  left: 12px;
-
+  /* Колір іконки */
   fill: var(--navy-blue);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* Зміна кольору іконки при фокусі на input */
-.thumb-input input:focus + .icon {
+.thumb-input .input:focus + .icon {
+  /* Зміна кольору іконки при фокусі на input */
   fill: var(--iris);
 }
 
+
+
 /* Блок - коментарі */
+.modal-textarea {
+  /* Визначення відступів між div та наступним елемен */
+  margin-bottom: 16px;
+}
+.textarea {
+  width: 100%; 
+  height: 120px;
+  font-size: 12px; 
+  line-height: 1.17;
+  letter-spacing: 0.04em; 
+  padding: 8px 16px;
+
+  background-color: transparent;
+  color: var(--navy-blue-modal);
+  /* стиль, ширина та колір межі навколо елемента */
+  border: 1px solid var(--navy-blue-modal);
+  border-radius: 4px;
+  /* Встановлення стилю контуру для елемента */
+  outline: transparent;
+  /* заборона зміни розміру елемента */
+  resize: none; 
+  /* анімаційний ефект для зміни значень властивостей стилю */
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+
+}
+
+.textarea:focus {
+  border-color: var(--iris); 
+}
+
 
 
 /* Блок з checkbox акцептування */
-.checkbox-policy {
+.modal-privacy {
   margin-bottom: 24px;
+}
+
+.label-privacy {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--light-slate);
+}
+
+/* Блок (spav) з іконкою checkbox */
+.checkbox-icon {
+  /* для подальшої реалізації позиціонування елементу */
+  display: inline-flex; 
+  /* розміри елемента */
+  width: 16px;
+  height: 16px;
+  /* вирівнювання іконки по вертикалі */
+  align-items: center; 
+  /* вирівнювання іконки по горизонталі */
+  justify-content: center; 
+  /* задання значення кольору іконки */
+  fill: transparent; 
+  /* визначення радіусу закруглення кутів елемента */
+  border: 1px solid var(--navy-blue-modal); 
+  /* радіус кутів елементе */
+  border-radius: 2px;
+  /* Анімаційний перехід */
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* Посилання на умови  */
+.privacy-link {
+  color: var(--iris);
+}
+
+.checkbox-input:checked .checkbox-icon {
+  /* вимкнення стандартного оформлення кнопки */
+  border: none;
+  /* зазначення фону */
+  background-color: var(--ocean);
+  /* зазначення кольору іконки */
+  fill: var(--cloud);
+}
+
+
+/* Кнопка - Send */
+.send-btn {
+  /* Визначення мінімальної ширини кнопки */
+  min-width: 169px;
+  /* Визначення висоти кнопки */
+  height: 56px;
+ /* Визначення сімейства шрифту */
+  font-family: "Roboto", sans-serif;
+  /* Визначення розміру шрифту */
+  font-size: 16px;
+  /* Визначення жирності шрифту */
+  font-weight: 500;
+  /* Визначення простору між рядками */
+  line-height: 1.5;
+  /* Визначення відстані між літерами */
+  letter-spacing: 0.04em;
+  /* Визначення кольору тексту в кнопці */
+  color: var(--white) ;
+  /* Визначення кольору фону */
+  background-color: var(--iris); 
+
+  /* Вимкнення стандартного оформлення кнопки - обводка */
+  border: none;
+
+  /* Визначення стилю курсору */
+  cursor: pointer;
+
+  /* Параметру переходу */
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+
+.send-btn:hover,
+.send-btn:focus {
+  /* Визначення кольору фону */
+  background-color: var(--ocean); 
 }
